Create save and getOneBycpf features
